<resources>
    <string name="app_name">BirdTrail</string>
    <string name="appNameNeat">BirdTrail</string>
    <string name="appPurpose">A bird tracking app</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="backText">&lt; Back</string>
    <string name="welcomeBackText">Welcome Back</string>
    <string name="signInInstructions">Login to your account</string>
    <string name="emailText">Email</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="rememberMeText">Remember Me</string>
    <string name="forgotPasswordText">Forgot Password?</string>
    <string name="noAccountText">Don\'t have an account?</string>
    <string name="registerText">Register</string>
    <string name="registerInstructions">Create your account</string>
    <string name="confirmPasswordText">Confirm Password</string>
    <string name="securityQuestionText">Security Question</string>
    <string name="securityAnswerText">Security Answer</string>
    <string name="existingAccountText">Already have an account?</string>
    <string-array name="securityQuestions">
        <item>In what city or town did your parents meet?</item>
        <item>What city were you born in?</item>
        <item>What was the first concert you attended?</item>
        <item>What is your mothers maiden name?</item>
    </string-array>
    <string name="rankingText">Ranking</string>
    <string name="homeText">Home</string>
    <string name="observationsText">Sightings</string>
    <string name="settingsText">Settings</string>
    <string name="selectedText">Selected</string>
    <string name="addObservationText">Add Observation</string>
    <string name="numberOfSightingsText">Number of sightings:</string>
    <string name="enterText">Enter</string>
    <string name="searchText">Search</string>
    <string name="timeframeText">Timeframe</string>
    <string name="distanceText">Distance</string>
    <string-array name="timeFilterOptions">
        <item>1 Week</item>
        <item>2 Weeks</item>
        <item>3 Weeks</item>
    </string-array>
    <string name="NewPassword">Enter new password</string>
    <string name="allSightingsText">All Sightings</string>
    <string name="speciesText">Species</string>
    <string name="SettingsLabel">Settings</string>
    <string name="SettingsUnitsType">Units Type</string>
    <string name="SettingsMetric">Metric</string>
    <string name="SettingsImperial">Imperial</string>
    <string name="SettingsDefualtDistance">Default Distance</string>
    <string name="SettingsOptions">Options</string>
    <string name="SettingsChangeProfilePicture">Change Profile Picture</string>
    <string name="SettingsPassword">Change Password</string>
    <string name="SettingsLogOut">Log Out</string>
    <string name="ObservationLabel">Observations</string>
    <string name="hotspotText">Hotspot</string>
    <string name="RankingLeaderboard">Leaderboard</string>
    <string name="RankingAchievements">Achievements</string>
    <string name="okText">ok</string>
    <string name="errorText">Error</string>
    <string name="sightingsAmountText">Sighted:</string>
    <string name="totalAmountText">Total:</string>
    <string name="failedSignIn">Sign In Failed</string>
    <string name="incorrectEmailPassCombo">Incorrect Email/Password Combination</string>
    <string name="failedSignUp">Sign Up Failed</string>
    <string name="completedSignUp">Sign Up Completed</string>
    <string name="instructToSignIn">Please Sign In to Continue</string>
    <string name="missingField">Missing</string>
    <string name="passwordShort">Password too short, needs to be 8 or more characters</string>
    <string name="passwordNeedsNumber">Password needs to contain at least 1 digit</string>
    <string name="passwordNeedsLowerCase">Password needs to contain at least 1 lower case character</string>
    <string name="passwordNeedsUpperCase">Password needs to contain at least 1 upper case character</string>
    <string name="passwordNeedsToStartWithUpperCaseLetter">Password needs start with an upper case character</string>
    <string name="passwordNeedsSpecialCharacter">Password needs to include one of the following special characters: -?!@#£$%+=&amp;</string>
    <string name="passwordSpecialCharacters">-?!@#£$%+=&amp;</string>
    <string name="emailAlreadyExists">Email Already Exists</string>
    <string name="usernameAlreadyExists">username Already Exists</string>
    <string name="emailNotValid">Email is not valid</string>
    <string name="usernameNotValid">Email is not valid</string>
    <string name="passwordsNotMatching">Passwords do not match</string>
    <string name="unknownText">Unknown</string>
    <string name="failedToLoadImage">Image failed to load</string>
    <string name="usernameShort">Username too short, needs to be 8 or more characters</string>
    <string name="usernameNeedsLowerCase">Username needs to contain at least 1 lower case character</string>
    <string name="usernameNeedsUpperCase">Username needs to contain at least 1 upper case character</string>
    <string name="usernameNeedsToStartWithUpperCaseLetter">Username needs start with an upper case character</string>
    <string name="newBadgeText">New Badge Unlocked</string>
    <string name="ImageSaved">Image Selected Saved</string>
    <string name="Confirmation">Confirmation</string>
    <string name="PasswordSuccessful">Password changed successfully</string>
    <string name="PasswordIncorrect">Password Invalid</string>
    <string name="noObservations">No Observations, click here to add</string>
    <string name="TextView">TextView</string>
    <string name="Username">You</string>
    <string name="HotspotLocation">{hotspot location}</string>
    <string name="HotspotDate">{hotspot date}</string>
    <string name="Filter">Filter</string>
    <string name="comingSoonText">Coming Soon</string>
    <string name="changeText">Change</string>
    <string name="confirmationText">Confirmation</string>
    <string name="cancelText">Cancel</string>
    <string name="passwordChangedText">Password changed successfully</string>
    <string name="passwordInvalidText">Password Invalid</string>
    <string name="selectedImageSaved">Image Selected Saved</string>
    <string name="foundText">Found</string>
    <string name="nextAchievement">Next Achievement</string>
    <string name="Directions">Directions</string>
    <string name="BirdName">Bird Name</string>

    <string name="EnterEmail">Enter your email</string>
    <string name="EmailMessage">Please enter your accounts email address below, an email containing a link to reset your password will be sent shortly after.
        Please note the email may appear in the junk folder.</string>
    <string name="Observation">Observation</string>
    <string name="LatestObservationLabel">Your Latest Observation</string>
    <string name="lonText">Lon</string>
    <string name="latText">Lat</string>
    <string name="passwordResetPrefix">Password reset sent to: </string>
    <string name="uploadCompleteText">Updated Profile Image</string>
    <string name="uploadFailedText">Image Failed To Upload</string>



    <string name="mapbox_access_token">pk.eyJ1Ijoic3QxMDA4MTgzOSIsImEiOiJjbG5lank2cmIwZHlyMmp0Y2h1c2VmZ2lkIn0.AU-LAXgDH6jTS1vHM9pfhw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>





</resources>