<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ranking"
        android:icon="@drawable/imgleaderboard"
        android:enabled="true"
        android:title="@string/rankingText" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/imghome"
        android:enabled="true"
        android:title="@string/homeText" />


    <item
        android:id="@+id/placeholder"
        android:enabled="true"
        android:title="" />


    <item
        android:id="@+id/observations"
        android:icon="@drawable/imgsearch"
        android:enabled="true"
        android:title="@string/observationsText" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/imgsettings"
        android:enabled="true"
        android:title="@string/settingsText"/>

</menu>