<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/dark_blue">

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backText"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/tvBack"
        android:layout_marginTop="20dp">


    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerText"
        android:textColor="@color/white"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerInstructions"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:layout_marginTop="6dp"/>

        <ImageView
            android:layout_marginTop="0dp"
            android:id="@+id/imgWalking"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/imgbirdlogo"
            android:layout_marginBottom="-26dp"
            android:layout_marginRight="-146dp"/>

        <ScrollView
            android:id="@+id/svFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdgeLength="1dp"
            android:requiresFadingEdge="vertical"
            android:paddingHorizontal="20dp"
            tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/llFields"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailText"
                android:textColor="@color/white"
                android:textSize="16dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/palette_full_10"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:padding="4dp"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/usernameText"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/palette_full_10"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/passwordText"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/palette_full_10"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"/>



            <TextView
                android:id="@+id/tvConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/confirmPasswordText"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/palette_full_10"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tvSecurityQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/securityQuestionText"
                android:textColor="@color/white"
                android:textSize="16dp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/palette_full_10"
                android:backgroundTint="@color/white"
                android:layout_marginTop="4dp"
                android:padding="4dp">
                <Spinner
                    android:id="@+id/spnSecurityQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:entries="@array/securityQuestions"
                    android:backgroundTint="@color/black"

                    android:textColor="@color/black"
                    />
            </RelativeLayout>


            <TextView
                android:id="@+id/tvSecurityAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/securityAnswerText"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etSecurityAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/palette_full_10"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"/>



        </LinearLayout>


        </ScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_centerHorizontal="true"
            android:layout_width="315dp"
            android:layout_height="58dp"
            android:layout_below="@id/tvAppPurpose"
            android:layout_marginTop="40dp"
            app:cornerRadius="12dp"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:backgroundTint="@color/light_blue"
            android:stateListAnimator="@null"
            app:strokeColor="@color/light_blue"
            app:strokeWidth="2dp"
            android:textSize="24dp"
            android:letterSpacing="0"
            android:textAllCaps="false"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/tvExistingAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/existingAccountText"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>

