<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AppSettings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsLabel"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:textSize="25dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#ECE6E6"
            android:layout_marginTop="50dp"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tvSettings"/>

        <TextView
            android:id="@+id/tvUnitsType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsUnitsType"
            android:layout_below="@id/tvSettings"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="35dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_below="@id/tvUnitsType"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnMetric"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:layout_marginRight="400dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/SettingsMetric"
                android:textColor="@color/black"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/btnImperial"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:text="@string/SettingsImperial"
                android:textColor="@color/black"
                app:cornerRadius="12dp"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/tvDefaultDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsDefualtDistance"
            android:layout_below="@id/toggleButton"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDefaultDistance"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:background="@drawable/palette_full_12"
            android:stepSize="1.0"
            android:value="50.0"
            android:valueFrom="1.0"
            android:valueTo="50.0"
            app:cornerRadius="12dp"
            app:thumbColor="@color/black"
            app:tickVisible="false"
            app:trackColor="@color/light_blue"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/slider"
            android:text="@string/SettingsOptions"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="37dp"
            android:textColor="@color/white"
            android:textSize="18dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#ECE6E6"
            android:layout_below="@id/slider"
            android:layout_marginTop="40dp"
            android:layout_toRightOf="@id/tvOptions"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:id = "@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tvOptions"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChangeProfilePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvOptions"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/imgperson"
                android:backgroundTint="@color/white"
                android:letterSpacing="0"
                android:stateListAnimator="@null"
                android:text="@string/SettingsChangeProfilePicture"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:cornerRadius="12dp"
                android:gravity="start"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnChangeProfilePicture"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:letterSpacing="0"
                android:gravity="start"
                android:drawableLeft="@drawable/imgchangepassword"
                android:stateListAnimator="@null"
                android:text="@string/SettingsPassword"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:cornerRadius="12dp"
                tools:ignore="TextSizeCheck,DuplicateClickableBoundsCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnChangePassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="35dp"
                android:drawableLeft="@drawable/imglogout"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:letterSpacing="0"
                android:stateListAnimator="@null"
                android:text="@string/SettingsLogOut"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:cornerRadius="12dp"
                android:gravity="start"
                tools:ignore="TextSizeCheck" />

            <ImageView
                android:id="@+id/imgBird"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="270dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="90dp"
                android:src="@drawable/imgbirdlogo" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>